@@ -30,6 +30,7 @@
   <string name="app_vending" translatable="false">http://play.google.com/store/apps/dev?id=8122479227040208191</string>
   <string name="app_github" translatable="false">https://github.com/patzly/doodle-android/</string>
   <string name="app_translate" translatable="false">https://www.transifex.com/patzly/doodle-android/</string>
+  <string name="app_privacy" translatable="false">https://patrick.zedler.xyz/doodle/privacy-policy-doodle/</string>
 
   <string name="wallpaper_description">Colorful live wallpaper with auto dark mode and power-efficient animations. Customize it to your needs!</string>
   <string name="wallpaper_description_picker">Explore a colorful collection of shapes, refined with gentle parallax and zoom effects when you swipe through your home screens and unlock your device.\nCustomize the wallpaper to match your own style!</string>
@@ -181,6 +182,8 @@
   <string name="about_github_description">Source code</string>
   <string name="about_translation" translatable="false">Transifex</string>
   <string name="about_translation_description">Help translate Doodle</string>
+  <string name="about_privacy">Privacy policy</string>
+  <string name="about_privacy_description">How is your data processed?</string>
 
   <!-- MESSAGES -->
 
